@@ -1,3 +1,6 @@
+2021-06-14 Dusan Jocic <dusanjocic@msn.com>
+	* [Engine] Renderer dynamic module should have dot (.) before arch
+
 2021-06-13 Dusan Jocic <dusanjocic@msn.com>
 	* [RenderSystem] Fixed blended of texture detail
 	* [RenderSystem] Fixed problems with parallax
